<resources>
    <string name="app_name">BeeTroot</string>
    <string name="title_activity_maps">BeeTroot</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Enregistrer</string>

    <string name="proximity">A proximité</string>
    <string name="map">Carte</string>

    <string name="coordonnees">Coordonnées</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">Adresse mail</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="address">Adresse</string>
    <string name="street">Rue</string>
    <string name="numberHouse">Numéro de maison</string>
    <string name="zipCode">Code postal</string>
    <string name="locality">Localité</string>
    <string name="farm">Ferme</string>
    <string name="farmName">Nom de la ferme</string>
    <string name="phoneFarm">Numéro de téléphone</string>

    <string name="editProfil">Editer mon profil</string>
    <string name="editFarm">Modifier ma ferme</string>
    <string name="addReview">Rédiger un avis</string>
    <string name="direction">Itinéraire</string>
    <string name="favourite">Favoris</string>
    <string name="description">Description</string>
    <string name="products">Produits proposées</string>

    <string name="firstnameError">Entrez un prénom valide</string>
    <string name="lastnameError">Entrez un nom valide</string>
    <string name="emailError">Entrez un email valide</string>
    <string name="phoneError">Entrez un numéro GSM valide</string>
    <string name="numberHouseError">Entrez un numéro valide</string>
    <string name="zipCodeError">Entrez un code postal valide</string>
    <string name="localityError">Entrez une localité valide</string>
    <string name="streetError">Entrez une rue valide</string>
    <string name="nameError">Entrez un nom valide</string>
    <string name="descriptionError">Entrez une description valide</string>
    <string name="confirmPasswordError">Mot de passe différent</string>
    <string name="passwordError">Entrez un mot de passe valide (min 8)</string>

    <string name="noData">Erreur Chargement info</string>

    <string name="searchFarm">Rechercher une ferme...</string>

    <string name="km"> km</string>
    <string name="doubleDots">: </string>

    <string name="profileSave">Profil sauvegardé</string>

    <string name="noInternet">Pas de Connection Internet !</string>
    <string name="connection">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="profileSaved">Profil sauvegardé</string>
    <string name="farmSaved">Ferme sauvegardée</string>

    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmation mot de passe</string>

    <string name="home">Home</string>
    <string name="myFarm">Ma ferme</string>
    <string name="harvestProximity">Glanage à proximité</string>
    <string name="settingsAccount">Paramètre du compte</string>
    <string name="logout">Déconnection</string>
    <string name="connectionFailded">Email/Mdp incorrect</string>
    <string name="deleteFromFavoris">Supprimé des Favoris!</string>
    <string name="addToFavoris">Ajouté au favoris!</string>

    <string name="getAllFarmsError">Erreur de recupération des fermes</string>
    <string name="farmByIdError">Erreur de recupération de la ferme</string>
    <string name="farmByEmailError">Erreur de recupération de la ferme</string>
    <string name="updateFarmError">Erreur lors de la modification</string>
    <string name="updateFarmOk">Mise à jour ferme effectué</string>
    <string name="getAllLikesError">Erreur de recupération des favoris</string>
    <string name="getPicturesError">Erreur de recupération des images</string>
    <string name="newLikeOk">Ajouté aux favoris!</string>
    <string name="newLikeError">Erreur d ajout aux favoris</string>
    <string name="deleteLikeOk">Suppression du favoris validé</string>
    <string name="deleteLikeError">Erreur de suppression du favoris</string>
    <string name="getUserByIdError">Erreur lors de la recupération des données</string>
    <string name="updateUserOk">Mise à jour effectuée</string>
    <string name="updateUserError">Erreur lors de la mise à jour</string>
    <string name="newUserOk">Inscription confirmé</string>
    <string name="newUserError">Erreur lors de l inscription</string>
    <string name="getUserIdByEmailError">Erreur de réception de données</string>
    <string name="noFarm">Vous n avez pas de ferme !</string>
    <string name="connectionValidate">Vous êtes connecté!</string>
    <string name="editMyFarm">Editer ma ferme</string>
    <string name="editMyprofile">Editer mon profil</string>
    <string name="myProfile">Mon profil</string>

    <string name="uriGoogleMap">http://maps.google.com/maps?daddr=</string>
    <string name="harvest">Récolte</string>
    <string name="baseUrlAPI">https://beetrootapi.azurewebsites.net/api/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getProductsError">Erreur lors de la récupération des produits</string>
    <string name="errorLoadingPictures">Error while loading pictures</string>
</resources>