<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp">
    </item>

    <item android:id="@+id/myFarm"
        android:title="@string/myFarm"
        android:icon="@drawable/ic_store_mall_directory_black_24dp">
    </item>

    <item android:id="@+id/harvestProximity"
        android:title="@string/harvestProximity"
        android:icon="@drawable/ic_spa_black_24dp">
    </item>

    <item android:id="@+id/settings"
        android:title="@string/settingsAccount"
        android:icon="@drawable/ic_settings_black_24dp">
    </item>

    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_input_black_24dp">
    </item>
</menu>