<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scroller_user_info"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InscriptionActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstname_ins"
                android:hint="@string/firstname"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastname_ins"
                android:hint="@string/lastname"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_ins"
                android:hint="@string/email"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_ins"
                android:hint="@string/password"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPassword_ins"
                android:hint="@string/confirmPassword"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_inscription_confirm"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="96dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#0F1D24"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/inscription"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>




</RelativeLayout>
</ScrollView>