<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserInfoActivity">

    <ScrollView
        android:id="@+id/scroller_farm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--  Ajouter icone favoris -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/recycler_view_pictures" >

                        </androidx.recyclerview.widget.RecyclerView>

                        <TextView
                            android:id="@+id/txtFarmerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="viewStart"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txtFarmerPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:textColor="#000000"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/direction"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"
                    android:text="@string/direction" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ScrollView
                            android:id="@+id/scroller_description"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:fillViewport="true"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/txtDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp" />
                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/review"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="12dp"
                    android:padding="8dp"
                    android:text="@string/addReview" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="10dp"
                    android:text="@string/products"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                    </androidx.cardview.widget.CardView>
                </androidx.recyclerview.widget.RecyclerView>
                -->

                <Button
                    android:id="@+id/edit"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="12dp"
                    android:padding="8dp"
                    android:text="@string/editFarm" />


                <Button
                    android:id="@+id/favourite"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/favourite"
                    tools:layout_editor_absoluteX="307dp"
                    tools:layout_editor_absoluteY="16dp" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>